[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/BigCheese3.png" type="Texture" id=1]
[ext_resource path="res://Assets/BigCheese3_walk.png" type="Texture" id=2]
[ext_resource path="res://Assets/BigCheese3_fall.png" type="Texture" id=3]
[ext_resource path="res://Assets/BigCheese3_jump.png" type="Texture" id=4]
[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Assets/background.png" type="Texture" id=6]
[ext_resource path="res://Assets/BigCheese3_crouch.png" type="Texture" id=7]
[ext_resource path="res://Assets/BigCheese3_crawl.png" type="Texture" id=8]
[ext_resource path="res://Assets/BigCheese3_punch.png" type="Texture" id=9]
[ext_resource path="res://Assets/background2.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 9 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 9 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 9 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 1 ), SubResource( 4 ) ],
"loop": true,
"name": "Punch",
"speed": 10.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Punch1",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "Crouch",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Run",
"speed": 12.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Crawl",
"speed": 3.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 12, 4 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 13, 10 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 10.1, 17 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 18, 16 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 160, 192 )
collision_layer = 513
collision_mask = 513
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
next_world = "res://Scenes/World.tscn"

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "Punch1"
playing = true

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 4
collision_mask = 4

[node name="Punch" type="CollisionShape2D" parent="Sprite/Area2D"]
light_mask = 4100
position = Vector2( 12, 6 )
shape = SubResource( 18 )
disabled = true

[node name="StandardShape" type="CollisionShape2D" parent="."]
shape = SubResource( 19 )

[node name="CrouchingShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 20 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -75 )
current = true
limit_top = 32
limit_bottom = 390

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 640, 0 )

[node name="background2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 0, 35 )
texture = ExtResource( 10 )
centered = false

[node name="background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 6 )
centered = false

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 21 )

[node name="SceneChange" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange"]
shape = SubResource( 22 )
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="area_entered" from="SceneChange" to="." method="_on_SceneChange_area_entered"]
